bdr.BDR.scala.error
Compilation error:
BDR:1: error: not found: value R
if (litMessage()==R){
                  ^BDR:4: error: not found: value L
} else if (litMessage==L){
                       ^BDR:7: error: not found: value I
}else if (litMessage==I){
                      ^BDR:10: error: not found: value A
}else if(litMessage==A){
                     ^BDR:12: error: not found: value B
}else if(litMessage==B){
                     ^BDR:15: error: not found: value C
}else if(litMessage==C){
                     ^BDR:19: error: not found: value Z
}else if(litMessage==Z){
                     ^BDR:22: error: not found: value Y
}else if(litMessage==Y){
                     ^BDR:26: error: not found: value X
}else if(litMessage==X){
                     ^