bdr.BDR.scala.code
if (litMessage()==R){
  droite()
  avance()
} else if (litMessage==L){
  gauche()
  avance()
}else if (litMessage==I){
  retourne()
  avance()
}else if(litMessage==A){
  avance()
}else if(litMessage==B){
  avance()
  avance()
}else if(litMessage==C){
  avance()
  avance()
  avance()
}else if(litMessage==Z){
  retourne()
  avance()
}else if(litMessage==Y){
  retourne()
  avance()
  avance()
}else if(litMessage==X){
  retourne()
  avance()
  avance()
  avance()
}